# bigbro_company_infrastructure

./: .gitignore  Pulumi.yaml  README.md  __main__.py  main.tf  pyproject.toml  variable.py  variables.tf
.github/workflows/: pull_request.yml  pulumi-preview.yml  pulumi-up.yml  push.yml
aws/ec2/: __init__.py  alb.py  ami.py  ec2.py  elb.py  keypair.py  securitgroup.py
aws/s3/: __init__.py  acl.py  ownership.py  s3.py
aws/vpc/: __init__.py  routes.py  subnets.py
bigbro/: __main__.py  variable.py
bigbro/vpc/: routes.py  subnets.py  vpc.py
modules/ec2/: alb.tf  listener.tf  outputs.tf  sg.tf  tg.tf  variables.tf
modules/ecr/: ecr.tf
modules/ecs/: cluster.tf  service.tf  sg.tf  task_definition.tf  variables.tf
modules/iam/: ecs.tf  task.tf  task_exec.tf  variables.tf
modules/s3/: s3.tf
modules/vpc/: igw.tf  output.tf  rt.tf  subnets.tf  variables.tf  vpc.tf
